# mikon

./: .gitignore  CLAUDE.md  README-en.md  README-ja.md  README.md  USAGE-en.md  USAGE-ja.md  USAGE.md  pyproject.toml
.github/workflows/: publish.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ConfigForm.tsx  ConfirmDialog.tsx  GpuSelector.tsx  LineageCanvas.tsx  LogViewer.tsx  MetricChart.tsx  Sidebar.tsx  StatusBadge.tsx  TagInput.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: ComparePage.tsx  ConfigsPage.tsx  DashboardPage.tsx  DatasetBuilderPage.tsx  DatasetsPage.tsx  DocsPage.tsx  GroupDetailPage.tsx  GroupsPage.tsx  JobLaunchPage.tsx  JobsPage.tsx  PipelinePage.tsx  RunDetailPage.tsx  RunsPage.tsx
mikon/: __init__.py  _runner.py  _utils.py  cli.py
mikon/sdk/: __init__.py  config.py  context.py  datasets.py  job.py  module.py  refs.py
mikon/server/: api.py  app.py  discovery.py  docs.py  models.py  problems.py  registry.py  resources.py  runner.py  scheduler.py  schema.py  settings.py  store.py
mikon/templates/docs/: CLAUDE.md  USAGE-en.md  USAGE-ja.md  USAGE.md
tests/: test_chains.py  test_discovery_runner_api.py  test_sdk.py
