[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mikon"
version = "0.0.5"
description = "Self-hosted AI development manager for GPU job execution on your own servers"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "miko-misa", email = "hacnosuke@gmail.com"},
]
keywords = [
  "gpu",
  "machine-learning",
  "deep-learning",
  "job-management",
  "mlops",
  "experiment-tracking",
  "nvidia",
  "amd",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "bleach>=6.1,<7",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "Markdown>=3.6,<4",
  "nvidia-ml-py>=12.550,<13",
  "psutil>=5.9,<8",
  "Pygments>=2.18,<3",
  "pymdown-extensions>=10.11,<11",
  "pydantic>=2.8,<3",
  "sse-starlette>=2.1,<4",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
  "watchfiles>=0.22,<2",
]

[project.urls]
Homepage = "https://github.com/miko-misa/mikon"
Repository = "https://github.com/miko-misa/mikon"
Issues = "https://github.com/miko-misa/mikon/issues"
Changelog = "https://github.com/miko-misa/mikon/releases"

[project.scripts]
mikon = "mikon.cli:app"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.hatch.build]
artifacts = ["mikon/web/**"]

[tool.hatch.build.targets.sdist]
include = [
  "/mikon",
  "/README.md",
  "/README-ja.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["mikon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
